# claude-code-api

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  setup.py
claude_code_api/: __init__.py  main.py
claude_code_api/api/: __init__.py  chat.py  models.py  projects.py  sessions.py
claude_code_api/core/: auth.py  claude_manager.py  config.py  database.py  session_manager.py
claude_code_api/models/: claude.py  openai.py
claude_code_api/tests/: test_gpt_turbo.py
claude_code_api/utils/: parser.py  streaming.py
tests/: conftest.py  test_api.sh  test_claude_working.py  test_end_to_end.py  test_real_api.py
